# cocos2d-x-audio

./: ALHeader.h  ALSupport.cpp  ALSupport.h  AudioCache.cpp  AudioCache.h  AudioCommon.cpp  AudioCommon.h  AudioDecoder.cpp  AudioDecoder.h  AudioDecoderFlac.cpp  AudioDecoderFlac.h  AudioDecoderManager.cpp  AudioDecoderManager.h  AudioDecoderMp3.cpp  AudioDecoderMp3.h  AudioDecoderOgg.cpp  AudioDecoderOgg.h  AudioDecoderVorbis.cpp  AudioDecoderVorbis.h  AudioDecoderVorbisStb.cpp  AudioDecoderVorbisStb.h  AudioDecoderWav.cpp  AudioDecoderWav.h  AudioEffect.cpp  AudioEffect.h  AudioEngine.cpp  AudioEngine.h  AudioEngineImpl.cpp  AudioEngineImpl.h  AudioFilter.cpp  AudioFilter.h  AudioMacros.cpp  AudioMacros.h  AudioParam.cpp  AudioParam.h  AudioPlayer.cpp  AudioPlayer.h  AudioPool.cpp  AudioPool.h  AudioRecordingDevice.cpp  (+27 more)
